--- a/ssmweb/src/main/webapp/Login.html
+++ b/ssmweb/src/main/webapp/Login.html
@@ -14,7 +14,7 @@
             <a>LOGIN</a>
         </div>
 
-        <form action="http://127.0.0.1:8080/hxcloud/log/login", method="POST">
+        <form action="http://127.0.0.1:8080/ssmweb/log/login", method="POST">
             <div class="login-input">
                 <p>
                     <a >username:</a>
